--- a/index.html
+++ b/index.html
@@ -5,12 +5,49 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
     <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="./styles/style.css">
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+
+    <section>
+      <div id="main-image">
+        <img src="./images/phones.png" alt="iphone">
+      </div>
+
+    
+      
+      <article>
+          <div class="images-text">
+           <img id="logo"src="./images/brand.png" alt="logo">
+           <img id="home-image" src="./images/home.png" alt="home">
+         </div>
+
+        <div class="description">
+          <h1>Capture and Share<br> the World's Moments</h1>
+           <p>Instagram is a <b>fast, beautiful</b> and <b>fun</b> way to share your life<br> with
+            friends and family.<br><br> Take a picture or video, choose a filter to transform its look<br> and feel, then post to Instagram
+            &mdash; it's that easy. You can<br> even share to Facebook, Twitter, Tumblr and more. It's a<br> new way to see the world.<br><br>
+            Oh yeah, did we mention it's free? </p>
+          </div>
+            <div class="images-bottom">
+              <img src="./images/badge-iphone.png" alt="badge-iphone">
+              <img src="./images/badge-android.png" alt="badge-android">
+          </div>
+        </article>
+    </section>
+
+    <footer>
+      <ul>
+        <li>ABOUT US</li>
+        <li>SUPPORT</li>
+        <li>BLOG</li>
+        <li>PRESS</li>
+        <li>API</li>
+        <li>JOBS</li>
+        <li>PRIVACY</li>
+        <li>TERMS</li>
+        <li id="gray-text">2014 INSTAGRAM</li>
+      </ul>
+    </footer>
   </body>
 </html>
