--- a/index.html
+++ b/index.html
@@ -1,16 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Instagram Clone .</title>
-    <!-- don't forget to link your styles -->
-  </head>
-  <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
-  </body>
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="styles/style.css">
+</head>
+
+<body>
+    <div class="back">
+
+    </div>
+    <div class="header">
+        <div class="phone">
+            <img src="./images/phones.png" alt="">
+        </div>
+        <div class="capture">
+            <div class="logo">
+                <img src="./images/brand.png" alt="">
+                <button><img src="images/home.png" alt=""> log in</button>
+            </div>
+            <div class="content">
+                <h2>Capture and Share <br>the World's Moments</h2>
+                <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.<br><br>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram — it's that easy. You can
+                    even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.<br><br>Oh yeah, did we mention it's free?</p>
+                <div class="stores">
+                    <img src="./images/badge-iphone.png" alt="">
+                    <img src="./images/badge-android.png" alt="">
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="footer">
+        <ul>
+            <li>About Us</li>
+            <li>Support</li>
+            <li>Blog</li>
+            <li>Press</li>
+            <li>API</li>
+            <li>Jobs</li>
+            <li>Privacy</li>
+            <li>Terms</li>
+            <li>&copy;2014 Instagram</li>
+        </ul>
+    </div>
+</body>
+
 </html>
