--- a/index.html
+++ b/index.html
@@ -4,14 +4,53 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="./styles/style.css" />
   </head>
   <body>
-    
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <div class="wrapper">
+      <div class="row">
+        <div class="column-phones-pic">
+          <img src="./images/phones.png" alt="phones" class=" phones-pic">
+        </div>
+        <div class="column-main-content">
+          <div class="main-content-header">
+            <img src="./images/brand.png" alt="brand" class="brand-pic">
+            <div class="home-login-btn">
+              <img src="./images/home.png" alt="home" class="home-pic">
+              <button class="login-btn">Log in</button>
+            </div>
+          </div>
+          <article class="main-content-card">
+              <h2>Capture and Share <br> the World's Moments</h2>
+              <p>Instagram is a <strong>fast, beautiful</strong> and <strong>fun</strong> way to share your life with
+                friends and family.
+              </p>
+              <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+                &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+              </p>
+              <p>Oh yeah, did we mention it's free?
+              </p>
+          </article>
+          <div class="main-content-footer">
+            <img src="./images/badge-iphone.png" alt="badge iphone">
+            <img src="./images/badge-android.png" alt="badge android">
+          </div>
+        </div>
+        </div>
+        <footer>
+          <ul>
+            <li><a href="https://google.com/" target="_blank">About us</a></li>
+            <li><a href="https://google.com/" target="_blank">Support</a></li>
+            <li><a href="https://google.com/" target="_blank">Blog</a></li>
+            <li><a href="https://google.com/" target="_blank">Press</a></li>
+            <li><a href="https://google.com/" target="_blank">Api</a></li>
+            <li><a href="https://google.com/" target="_blank">Jobs</a></li>
+            <li><a href="https://google.com/" target="_blank">Privacy</a></li>
+            <li><a href="https://google.com/" target="_blank">Terms</a></li>
+          </ul>
+          <p class="copy-right"><strong>&copy; 2014 Instagram</strong></p>
+
+        </footer>
+      </div>
   </body>
 </html>
