--- a/index.html
+++ b/index.html
@@ -4,13 +4,45 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="./styles/style.css">
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <div class="mainBlock">
+      <div class="firstBlock">
+        <div class="firstBlock__img">
+          <img src="./images/phones.png">
+        </div>
+        <div class="firstBlock__text">
+          <div class="firstBlock__text-title">
+            <img src="./images/brand.png">
+            <a class="firstBlock__text-login">
+              <img src="./images/home.png">
+              <span>Log in</span>
+            </a>
+          </div>
+          <div class="firstBlock__text-content">
+            <h2>Capture and Share <br>the World's Moments</h2>
+            <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>
+            <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+            <p>Oh yeah, did we mention it's free?</p>
+            <div class="firstBlock__apps">
+              <img src="./images/badge-iphone.png">
+              <img src="./images/badge-android.png">
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <footer class="thirdBlock__footer">
+      <a href="#">About Us</a>
+      <a href="#">Support</a>
+      <a href="#">Blog</a>
+      <a href="#">Press</a>
+      <a href="#">API</a>
+      <a href="#">Jobs</a>
+      <a href="#">Privacy</a>
+      <a href="#">Terms</a>
+      <span>&copy; 2014 Instagram</span>
+    </footer>
   </body>
 </html>
