--- a/index.html
+++ b/index.html
@@ -4,13 +4,63 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="./styles/style.css">
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+
+    <section class="blue">
+      <div class="blue-top">
+        <div>
+          <div>
+            <img src="./images/phones.png" alt="">
+          </div>
+        </div>
+        <div class="blue-aside">
+          <div class="blue-aside-icons">
+            <div>
+              <img src="./images/brand.png" alt="">
+            </div>
+            <div>
+              <div class="boton">
+                <img src="./images/home.png" alt="">
+                <h3>Log in</h3>
+              </div>
+            </div>
+          </div>          
+          <div class="blue-aside-square">
+            <h3>Capture and Share <br> the World's Moments</h3>
+            <p>Instagram is a <b>fast</b>, <b>beautifull</b> and <b>fun</b> way to share your life whith friends and family</p>
+            <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+              -- it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+              <p>Oh yeah, did we mention it's free?</p> 
+          </div>
+          <div class="blue-down">
+            <div>
+              <img src="./images/badge-iphone.png" alt="">
+            </div>
+            <div>
+              <img src="./images/badge-android.png" alt="">
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="white">
+
+    </section>
+    <footer>
+      <nav>
+        <ul>
+          <li>ABOUT US</li>
+          <li>SUPOORT</li>
+          <li>BLOG</li>
+          <li>PRESS</li>
+          <li>API</li>
+          <li>JOBS</li>
+          <li>PRIVACY</li>
+          <li>TERMS</li>
+          <li class="footer-grey">@2014 Instagram</li>
+        </ul>
+      </nav>
   </body>
 </html>
